--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -1,22 +1,65 @@
 header {
-  background-color: red;
+  background-color: #252525;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 50px;
+  padding: 0 15%;
+}
+header a {
+  text-decoration: none;
+  color: #ffffff;
+}
+header a:hover {
+  color: #fbd16b;
+}
+.login-signup {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.signup-btn a {
+  background-color: #fbd16b;
+  border: 2px solid #fbd16b;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-left: 10px;
+  text-decoration: none;
+  color: #252525;
+  font-weight: bold;
+}
+.signup-btn a:hover {
+  background-color: #252525;
+  color: #fbd16b;
 }
 #user-btn {
-  background: white;
+  background-color: #252525;
   border: 1px solid transparent;
   cursor: pointer;
+  color: #ffffff;
 }
 #user-btn:hover {
   color: #fbd16b;
 }
 .profile-dropdown {
+  position: absolute;
   max-width: 150px;
-  padding: 10px;
   text-align: center;
+  padding: 10px;
   list-style: none;
   border-radius: 5px;
   box-shadow: 4px 0 4px 0 #888888;
+  color: #ffffff;
+  background-color: #252525;
 }
 .profile-dropdown .user { font-weight: bold; }
-.signOut { color: #dddddd; cursor: pointer; }
-.signOut:hover { color: #ff7dc6; }
+.signOut {
+  background-color: #fbd16b;
+  border-radius: 5px;
+  color: #252525;
+  cursor: pointer;
+  width: 100%;
+}
+.signOut:hover { 
+  background-color: #353535;
+  color: #fbd16b; }
