--- a/frontend/src/components/SignUpForm/signupForm.css
+++ b/frontend/src/components/SignUpForm/signupForm.css
@@ -5,48 +5,47 @@
   justify-content: space-evenly;
   row-gap: 5px;
 
-  background-color: #252525;
   padding-top: 10px;
-  border: 1px solid #252525;
-  border-radius: 0 0 5px 5px;
-  box-shadow: 4px 0 4px 0 #888888;
+  border-radius: 5px;
   font-size: 1.25em;
   width: 70%;
-  margin: 0 15%;
+  margin: 50px 15%;
 }
 #signup-errors {
   grid-area: error;
   align-self: center;
   height: 100%;
   padding: 5px;
-  
   list-style: none;
   font-weight: bold;
-  color: #ff0000;
+  color: #ffffff;
+  background-color: #ff0000;
+  width: 100%;
+  text-align: center;
 }
 #signup input {
   font-size: 1.25em;
   border: 1px solid #454545;
   border-radius: 2px;
-  background-color: #353535;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
 }
 #signup-subm {
   grid-area: subm;
   width: 100%;
 
   margin-top: 10px;
-  border: 2px solid #fbd16b;
-  background-color: #fbd16b;
-  border-radius: 0 0 5px 5px;
+  border: 2px solid #ff0000;
+  background-color: #ff0000;
+  border-radius: 2px;
   font-weight: bold;
   font-size: 1.25em;
   padding: 5px;
-  color: #252525;
+  color: #ffffff;
   cursor: pointer;
+  transition: background-color .2s linear;
 }
 #signup-subm:hover {
-  border: 2px solid #353535;
-  background-color: #353535;
-  color: #fbd16b;
+  border: 2px solid #cc0000;
+  background-color: #cc0000;
 }
