--- a/frontend/src/components/MusicPlayer/musicPlayer.css
+++ b/frontend/src/components/MusicPlayer/musicPlayer.css
@@ -17,11 +17,36 @@
 .songTimer {
   font-size: 0.9em;
 }
+
+/* PROGRESS BAR */
 .progress {
-  background-color: red;
+  --bar-bg: #cccccc;
+  --seek-before-width: 0;
+  --seek-before-color: #ff0000;
+  --knobby: #ffffff;
+  --selectedKnobby: #cccccc;
+
+  appearance: none;
+  background: var(--bar-bg);
+  border-radius: 3px;
+  position: relative;
+  width: 100%;
+  height: 10px;
+  outline: none;
+}
+.progress::before {
+  content: "";
+  height: 10px;
+  width: var(--seek-before-width);
+  background-color: var(--seek-before-color);
+  border-radius: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
   cursor: pointer;
 }
-
+/* CONTINUE */
 .trackControl {
   display: flex;
   align-items: center;
