--- a/frontend/src/components/MusicPlayer/musicPlayer.css
+++ b/frontend/src/components/MusicPlayer/musicPlayer.css
@@ -16,6 +16,7 @@
 }
 .songTimer {
   font-size: 0.9em;
+  margin: 0 10px;
 }
 
 /* PROGRESS BAR */
@@ -33,6 +34,7 @@
   width: 100%;
   height: 10px;
   outline: none;
+  box-sizing: border-box;
 }
 .progress::-webkit-slider-runnable-track {
   background: var(--bar-bg);
