--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,25 @@ body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
 }
+.songList{
+  width:100%;
+  padding: 0 15%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.songItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: #000000;
+  border-radius: 3px;
+  width: 70%;
+  color: white;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.songItem:hover {
+  background-color: #ff0000;
+}
