--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -7,6 +7,11 @@ header {
   padding: 0 15%;
   /* border-bottom: 1px solid black; */
   box-shadow: 5px 0px 5px 5px #aaaaaa;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  z-index: 5;
+  box-sizing: border-box;
 }
 header a {
   text-decoration: none;
