Fixed some form styling issues

--- a/frontend/src/components/SignUpForm/signupForm.css
+++ b/frontend/src/components/SignUpForm/signupForm.css
@@ -9,7 +9,7 @@
   border-radius: 5px;
   font-size: 1.25em;
   width: 70%;
-  margin: 50px 15%;
+  margin: 75px 15% 50px 15%;
 }
 #signup-errors {
   grid-area: error;
