Update Done && Added Some Mobile Friendliness

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 .songList{
   width:100%;
-  padding: 0 15%;
+  padding: 0 20%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -17,22 +17,22 @@ body {
   align-items: center;
   justify-content: space-between;
 
-  background-color: #252525;
-  border-radius: 3px;
-  width: 70%;
-  color: white;
+  border-bottom: 2px solid #cccccc;
+  width: 60%;
+  color: #252525;
   padding: 5px 10px;
   cursor: pointer;
-  filter: grayscale(100%)
+  /* filter: grayscale(100%) */
 }
 .songItem:hover {
   color: #ff0000;
-  filter: grayscale(0%)
+  /* filter: grayscale(0%) */
+  border-color: #ff0000;
 }
 .songpage {
   display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: flex-start;
 }
 .songpage img {
   height: 100px; width: 100px;
@@ -46,7 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 200px;
-  color: #ffffff;
+  color: #252525;
 }
 .userInfo p {
   align-self: flex-end;
@@ -59,8 +59,39 @@ body {
 }
 .userIcons i, .userIcons a {
   padding: 0 5px;
-  color: #ffffff;
+  color: #cccccc;
 }
 .userIcons i:hover{
-  color: #cccccc
+  color: #252525
+}
+
+@media screen and (max-width: 1000px) {
+  .songList {
+    padding: 0;
+    width: 100%;
+  }
+  .songItem {
+    flex-direction: column;
+    width: 100%;
+  }
+  .songpage {
+    width: 100%;
+    padding-right: 15px;
+  }
+  .userInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    text-align: center;
+  }
+  .userInfo p {
+    align-self: center;
+    width: 45vw;
+  }
+  .userIcons {
+    align-self: inherit;
+    width: 45vw
+  }
 }
