--- a/frontend/src/components/DeleteSongPage/deleteSong.css
+++ b/frontend/src/components/DeleteSongPage/deleteSong.css
@@ -1,11 +1,14 @@
 .del-container {
   background-color: #00000055;
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position:fixed;
+  top: 0;
+  z-index: 4;
 }
 .del-modal {
   background-color: #ffffff;
