--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -5,11 +5,9 @@
   justify-content: space-evenly;
   row-gap: 5px;
 
-  padding-top: 10px;
-  border-radius: 5px;
   font-size: 1.25em;
   width: 70%;
-  margin: 50px 15%;
+  margin: 20px 15%;
 }
 #login-errors {
   grid-area: error;
@@ -31,7 +29,6 @@
   color: #000000;
 }
 #login-subm {
-  grid-area: subm;
   width: 100%;
 
   margin-top: 10px;
@@ -48,4 +45,20 @@
 #login-subm:hover {
   border: 2px solid #cc0000;
   background-color: #cc0000;
+}
+.login-button {
+  background-color: #ff0000;
+  border: 1px solid #ff0000;
+  border-radius: 3px;
+  padding: 5px 10px;
+  margin-left: 10px;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: bold;
+  transition: all .2s linear;
+}
+.login-button:hover {
+  background-color: #252525;
+  border-color: #252525;
+  color: #ffffff;
 }
