--- a/frontend/src/components/DemoUser/demoUser.css
+++ b/frontend/src/components/DemoUser/demoUser.css
@@ -1,61 +1,14 @@
-#demo{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  row-gap: 5px;
-
-  font-size: 1.25em;
-  width: 70%;
-  margin: 20px 15%;
-}
-#demo-errors {
-  grid-area: error;
-  align-self: center;
-  height: 100%;
-  padding: 5px;
-  list-style: none;
-  font-weight: bold;
-  color: #ffffff;
-  background-color: #ff0000;
-  width: 100%;
-  text-align: center;
-}
-#demo input {
-  font-size: 1.25em;
-  border: 1px solid #454545;
-  border-radius: 2px;
-  background-color: #ffffff;
-  color: #000000;
-}
-#demo-subm {
-  width: 100%;
-
-  margin-top: 10px;
-  border: 2px solid #ff0000;
-  background-color: #ff0000;
-  border-radius: 2px;
-  font-weight: bold;
-  font-size: 1.25em;
-  padding: 5px;
-  color: #ffffff;
-  cursor: pointer;
-  transition: background-color .2s linear;
-}
-#demo-subm:hover {
-  border: 2px solid #cc0000;
-  background-color: #cc0000;
-}
 .demo-button {
-  background-color: #ff0000;
+  background-color: transparent;
   border: 1px solid #ff0000;
   border-radius: 3px;
   padding: 5px 10px;
   margin-left: 10px;
   text-decoration: none;
-  color: #ffffff;
+  color: #ff0000;
   font-weight: bold;
   transition: all .2s linear;
+  white-space: nowrap;
 }
 .demo-button:hover {
   background-color: #252525;
