--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -56,6 +56,7 @@
   color: #ff0000;
   font-weight: bold;
   transition: all .2s linear;
+  cursor: pointer;
 }
 .login-button:hover {
   background-color: #252525;
