--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -2,9 +2,9 @@ header {
   background-color: #ffffff;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 50px;
-  padding: 0 15%;
+  padding: 0 20%;
   /* border-bottom: 1px solid black; */
   box-shadow: 5px 0px 5px 5px #aaaaaa;
   position: fixed;
