Set Heart to change color depending on state

--- a/frontend/src/components/Like/like.css
+++ b/frontend/src/components/Like/like.css
@@ -1,4 +1,9 @@
 .like-btn {
   background-color: transparent;
   border: 1px solid transparent;
+  cursor: pointer;
 }
+.liked         { color: #f00 }
+.liked:hover   { color: #c00 }
+.unliked       { color: #ccc }
+.unliked:hover { color: #999 }
