--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -5,7 +5,6 @@ header {
   justify-content: space-between;
   height: 50px;
   padding: 0 20%;
-  /* border-bottom: 1px solid black; */
   box-shadow: 5px 0px 5px 5px #aaaaaa;
   position: fixed;
   top: 0; left: 0;
@@ -83,19 +82,19 @@ header a:hover {
   display: flex;
   align-items: center;
 }
-.userActions > a {
-  font-size: 1.5em;
-  background-color: #ff0000;
-  border: 2px solid #ff0000;
+.upload {
+  background-color: transparent;
+  border: 1px solid #ff0000;
   border-radius: 3px;
   padding: 5px 10px;
   margin-left: 10px;
   text-decoration: none;
-  color: #ffffff;
+  color: #ff0000;
   font-weight: bold;
   transition: all .2s linear;
+  cursor: pointer;
 }
-.userActions > a:hover {
+.upload:hover {
   background-color: #252525;
   border-color: #252525;
   color: #ffffff;
