Added userpages and restructured store to allow for universal edits and song plays

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,6 +56,10 @@ body {
 .userInfo p {
   align-self: flex-end;
 }
+.userInfo a {
+  text-decoration: none;
+  color: inherit;
+}
 .userInfo p:hover {
   color: #ff0000;
 }
