--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,9 @@ body {
   font-family: 'Raleway', sans-serif;
   overflow-x: hidden;
 }
+.popup-overlay {
+  background: #25252555;
+}
 .songList{
   width:100%;
   padding: 0 20%;
